--- a/admin/styles/components/Sidebar.module.scss
+++ b/admin/styles/components/Sidebar.module.scss
@@ -5,14 +5,15 @@
   color: $text-dark;
   display: block;
   overflow: hidden;
+  position: relative;
   height: 100%;
-  width: 10vw;
+  width: 11vw;
   border-radius: 40px 0 0 40px;
   clear: both;
   box-shadow: $box-shadow-sidebare;
 }
 
-.title {
+.Logo {
   font-size: medium;
   text-align: center;
   font-weight: 800;
@@ -26,7 +27,7 @@
   text-transform: uppercase;
   font-weight: bold;
   color: $theme-orange;
-  font-size: larger;
+  font-size: large;
 }
 
 .MenuItem {
@@ -40,10 +41,6 @@
 
 .Icon {
   font-size: 30px;
-}
-
-.Line {
-  margin-left: 3.5vw;
 }
 
 .Link {
@@ -60,4 +57,21 @@
 
 .logo img {
   max-width: 100px;
+}
+
+.Logout {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
+  .Line {
+    display: flex;
+
+    .Inline {
+      display: flex;
+      cursor: pointer;
+      flex-direction: row;
+    }
+  }
 }
