--- a/admin/styles/components/Sidebare.module.scss
+++ b/admin/styles/components/Sidebare.module.scss
@@ -2,11 +2,10 @@
 
 .sidebare_container {
   background-color: $bg-dark;
-  //   color: rosybrown;
-  width: 10vw;
-  height: inherit;
+  width: 11vw;
+  height: 99vh;
   position: absolute;
-  right: 1%;
+  right: 0;
   border-radius: 0 1rem 1rem 0;
   padding: 8px;
 }
@@ -80,14 +79,3 @@
   font-weight: 600;
 }
 
-/* .icon_indicator {
-	display: flex;
-	position: relative;
-	background: #f28821;
-	margin: 10px;
-	width: 15px;
-	z-index: 11;
-	height: 15px;
-	border-radius: 8px;
-	transform: translate(-9px, -1px);
-} */
