--- a/admin/styles/globals.scss
+++ b/admin/styles/globals.scss
@@ -1,12 +1,11 @@
 @import "./variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-@import url("https: //cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
+
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: $text-dark;
 }
 
 body {
@@ -29,10 +28,15 @@ body {
     position: fixed !important;
 
     main {
+      display: block;
+      width: 100%;
+      height: 99vh;
+      justify-content: center;
+      align-items: center;
       overflow-y: scroll;
       -ms-overflow-style: none;
       scrollbar-width: none;
-      height: inherit;
+      color: $text-color !important;
 
       &::-webkit-scrollbar {
         display: none;
