add several new pages in admin and modify server

--- a/admin/styles/components/Panel.module.scss
+++ b/admin/styles/components/Panel.module.scss
@@ -2,4 +2,11 @@
 
 .PanelWrapper {
 	background-color: $bg-darker !important;
+	color: $text-greyer !important;
+
+	.CardHeader {
+		font-weight: bold;
+		color: $text-color !important;
+
+	}
 }
