--- a/admin/styles/pages/Home.module.scss
+++ b/admin/styles/pages/Home.module.scss
@@ -9,7 +9,7 @@
   justify-content: space-around;
   align-items: stretch;
   background-color: $bg-dark;
-  margin: 0 0.5rem;
+  // margin: 0 0.5rem;
   //   padding-bottom: 2rem;
 
   .InlineRow {
