--- a/admin/styles/variables.scss
+++ b/admin/styles/variables.scss
@@ -17,6 +17,7 @@ $text-darker: #8d8d8d79;
 $text-darkest: #8d8d8d90;
 $text-grey5: #555;
 $text-grey: #777;
+$text-black: #000;
 $text-greyer: #94a0ad;
 $text-greyest: #999;
 $text-dark: #8d8d8d99;
