--- a/admin/styles/components/Messages.module.scss
+++ b/admin/styles/components/Messages.module.scss
@@ -1,7 +1,7 @@
 @import "../variables.scss";
 
 .conversations_container {
-  width: 22vw;
+  width: 16vw;
   background: $bg-dark;
   display: block;
   font-weight: bold;
@@ -38,10 +38,9 @@
 
 .content_container {
   display: inline-flex;
-  width: 55vw;
+  width: 64%;
   height: 98vh;
   background: $bg-dark;
-  margin-left: 0.5rem;
   margin: 0 0.25rem;
   padding-left: 0.5rem;
   overflow: hidden;
@@ -50,14 +49,10 @@
   // background: $theme-orange;
 }
 
-.content_container::-webkit-scrollbar {
-  display: none;
-}
-
 .conversations_list {
   display: block;
   position: fixed;
-  width: 22vw;
+  width: 16vw;
   height: 86vh;
   overflow: hidden;
   overflow-y: scroll;
@@ -66,16 +61,11 @@
   scrollbar-width: none;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.conversations_list::-webkit-scrollbar {
-  display: none;
-}
-
 .conversation_container {
   display: inline-block;
   margin-bottom: 1.8rem;
-  width: 22vw;
-  padding: 0.5rem;
+  width:16vw;
+  padding: 0.3rem;
   align-items: flex-start;
 }
 
@@ -98,18 +88,22 @@
 .searchBox {
   display: block;
   margin: 1rem;
+  color: $text-greyer;
 
   input {
-    width: 20vw;
+    width: 15vw;
     font-weight: 500;
     line-height: 2.5rem;
-    padding-left: 4rem;
     border-radius: 30px;
     background-color: $bg-gray;
-    color: $text-color !important;
+    text-align: center;
     font-size: large;
     border: 0;
     position: relative;
+
+    &::placeholder {
+      color: $text-grey;
+    }
 
     &::selection,
     &:focus {
@@ -162,13 +156,16 @@
 .messages_wrapper {
   display: flex;
   position: fixed;
-  width: 78vw;
+  width: 100%;
   height: 98%;
   flex-direction: row;
   overflow: hidden;
   overflow-y: scroll;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.content_container::-webkit-scrollbar,
+.conversations_list::-webkit-scrollbar,
 .messages_wrapper::-webkit-scrollbar {
   display: none;
 }
