--- a/admin/styles/components/Sidebare.module.scss
+++ b/admin/styles/components/Sidebare.module.scss
@@ -4,19 +4,23 @@
   background-color: $bg-dark;
   width: 11vw;
   height: 99vh;
-  position: absolute;
   right: 0;
   border-radius: 0 1rem 1rem 0;
   padding: 8px;
+  color: $text-grey;
 }
 
 .activites_container {
   background: $bg-secondary;
   // width: 100%;
-  height: 49%;
+  height: 50%;
   border-radius: 10px;
   padding: 10px;
-
+  overflow: hidden;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
   /* border: 1px solid #8d8d8d80; */
   //   margin: 0.5rem;
   /* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 2px #fca32010; */
@@ -25,18 +29,20 @@
 
 .agenda_container {
   background: $bg-secondary;
-  // width: 100%;
   height: 42%;
-  /* bottom: -5rem; */
-  //   margin: 0 0.5rem;
   margin-top: 8px;
   border-radius: 10px;
   position: relative;
   /* border: 1px solid #8d8d8d80; */
   padding: 10px;
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  /* IE and Edge */
   /* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 2px #fca32010; */
   // box-shadow:  $box-shadow-sidebare;
 }
+
 .profilemenu_container {
   background: transparent;
   width: 100%;
@@ -46,6 +52,12 @@
   flex-direction: row;
   /* bottom: -5rem; */
   /* border: 1px solid #8d8d8d80; */
+}
+
+.title {
+  color: $text-color;
+  font-weight: bold;
+  font-size: larger;
 }
 
 .profile {
@@ -70,7 +82,7 @@
 
 .role {
   background-color: $theme-yellow;
-  color: $text-secondary;
+  color: $text-black;
   width: max-content;
   text-transform: uppercase;
   padding: 5px 15px;
@@ -79,3 +91,8 @@
   font-weight: 600;
 }
 
+.sidebare_container::-webkit-scrollbar,
+.activites_container::-webkit-scrollbar,
+.agenda_container::-webkit-scrollbar {
+  display: none;
+}
