--- a/admin/styles/globals.scss
+++ b/admin/styles/globals.scss
@@ -1,11 +1,22 @@
 @import "./variables.scss";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import "@fontsource/poppins/300.css";
+@import "@fontsource/poppins/400.css";
+@import "@fontsource/poppins/500.css";
+@import "@fontsource/poppins/600.css";
+@import "@fontsource/poppins/700.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
@@ -19,16 +30,17 @@ body {
   margin: auto;
   position: fixed !important;
 
+
   .ext_wrapper {
     display: flex;
-    width: 99%;
-    height: 99%;
+    width: 99vw;
+    height: 99vh;
     background-color: $bg-secondary;
     border-radius: 1rem;
     position: fixed !important;
 
     main {
-      display: block;
+      // background-color: $theme-yellow !important;
       width: 100%;
       height: 99vh;
       justify-content: center;
@@ -37,6 +49,12 @@ body {
       -ms-overflow-style: none;
       scrollbar-width: none;
       color: $text-color !important;
+      margin: 0 0.5rem;
+      z-index: 20;
+
+      &::placeholder {
+        color: $text-grey;
+      }
 
       &::-webkit-scrollbar {
         display: none;
@@ -48,4 +66,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+::placeholder {
+  color: $text-grey;
 }
