--- a/admin/styles/pages/orders.module.scss
+++ b/admin/styles/pages/orders.module.scss
@@ -6,3 +6,25 @@
     width: 77vw;
     height: 100%;
 }
+
+.FormWrapper {
+    background-color: $bg-dark;
+    padding: 1rem ;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+
+    select,
+    input {
+        background-color: #333;
+        border: 1px solid #353444;
+        border-radius: 5px;
+
+        &:hover,
+        &:focus,
+        &::selection {
+            background-color: #434343;
+            border: 1px solid #444;
+        }
+    }
+}
