--- a/admin/styles/pages/users.module.scss
+++ b/admin/styles/pages/users.module.scss
@@ -6,7 +6,7 @@
     margin-left: 0.5rem;
     text-align: center;
     width: 77vw;
-    color: azure;
+    color: $text-color;
     background: $bg-dark;
 
     .SingleUser {
